# pymotivaxmc2

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  pymotiva_demo.ipynb  pymotivaxmc2_demo.ipynb  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/workflows/: ci.yml  coverage.yml  health.yml  lint.yml  release.yml  tests.yml
docs/: Emotiva_Remote_Interface_Description V3.1.txt  Emotiva_Remote_Interface_Description.md  emotiva_lib_fixes.md  phase5_summary.md  refactoring_implementation_plan.md
docs/architecture/: overview.md
docs/guides/: cli.md  commands.md  connection.md  quickstart.md  subscriptions.md
docs/images/: architecture.dot  command-flow.dot  connection-lifecycle.dot  discovery.dot  subscription-flow.dot
examples/: notification_example.py
pymotiva.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pymotivaxmc2/: README.md  __init__.py  cli.py  constants.py  controller.py  emotiva.py  emotiva_types.py  enums.py  exceptions.py  network.py  notifier.py  protocol.py  state.py  types.py  utils.py
pymotivaxmc2/core/: discovery.py  dispatcher.py  protocol.py  socket_mgr.py
tests/: __init__.py  conftest.py  test_cli.py  test_controller.py  test_core_dispatcher.py  test_core_logging.py  test_core_protocol.py  test_core_xmlcodec.py  test_emotiva.py  test_enums.py  test_exceptions.py  test_network.py  test_notifier.py  test_protocol.py  test_state.py
