[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymotivaxmc2"
version = "0.3.0"
description = "A Python library for controlling eMotiva A/V processors"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Dmitri Romanovskij", email = "dmitri.romanovski@gmail.com"}
]
dependencies = [
    "aiohttp>=3.8.0",
    "websockets>=10.0",
    "aiofiles>=0.8.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    pytest>=6.0,
    pytest-cov>=2.0,
    pytest-asyncio>=0.17.0,
    black>=21.0
    mypy>=0.9
    flake8>=3.9
]

[tool.setuptools]
package-dir = { "" = "pymotivaxmc2" }

[tool.setuptools.packages.find]
where = ["pymotivaxmc2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pymotivaxmc2"

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 
