[project]
name = "pymotivaxmc2"
version = "0.6.0"
description = "Async Python library for Emotiva XMC-2 and related devices"
readme = "README.md"
authors = [{name = "eMotiva Integration"}]
license = {text = "MIT"}
dependencies = []
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["pymotivaxmc2"]
