[project]
name = "pymotivaxmc2"
version = "0.7.0"
description = "Async Python library for Emotiva XMC-2 and related devices"
readme = "README.md"
authors = [{name = "eMotiva Integration"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["emotiva", "xmc-2", "avr", "home-automation", "async"]
dependencies = [
    "typing-extensions>=3.7.4",
]
requires-python = ">=3.11"

[project.optional-dependencies]
# NOTE: no direct-URL (git+https) dependencies here. PyPI rejects any package
# whose published metadata carries a direct reference, so the py-dev-gates gate
# tool is NOT listed: CI installs it via the droman42/py-dev-gates composite
# action (which self-installs it), and local contributors install it with the
# one-off command in CONTRIBUTING.md.
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "import-linter>=2.0",
    "pyright==1.1.410",
]

[project.urls]
Homepage = "https://github.com/yourusername/pymotivaxmc2"
Documentation = "https://pymotivaxmc2.readthedocs.io/"
Repository = "https://github.com/yourusername/pymotivaxmc2.git"
Issues = "https://github.com/yourusername/pymotivaxmc2/issues"

[project.scripts]
emu-cli = "pymotivaxmc2.cli:main"

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymotivaxmc2*"]
exclude = ["tests*", "docs*", "*.tests*", "*.tests.*"]

[tool.setuptools.package-data]
# PEP 561: ship the py.typed marker so downstream type checkers honour the
# inline annotations instead of treating the package as untyped.
pymotivaxmc2 = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# ---------------------------------------------------------------------------
# import-linter contracts (CI-enforced via droman42/py-dev-gates `lint-imports`)
# ---------------------------------------------------------------------------
# The library is small but directional: a CLI drives a high-level controller
# facade, which drives the protocol `core`, which rests on the leaf modules
# `enums` and `exceptions`. Dependencies must point inward; these contracts
# fail the build if that direction is ever reversed.
[tool.importlinter]
root_packages = ["pymotivaxmc2"]

[[tool.importlinter.contracts]]
name = "Protocol core does not import the high-level facade or CLI"
type = "forbidden"
source_modules = ["pymotivaxmc2.core"]
forbidden_modules = [
    "pymotivaxmc2.controller",
    "pymotivaxmc2.cli",
]

[[tool.importlinter.contracts]]
name = "Controller facade does not import the CLI"
type = "forbidden"
source_modules = ["pymotivaxmc2.controller"]
forbidden_modules = ["pymotivaxmc2.cli"]

[[tool.importlinter.contracts]]
name = "Enums are a leaf (definitions, not behaviour)"
type = "forbidden"
source_modules = ["pymotivaxmc2.enums"]
forbidden_modules = [
    "pymotivaxmc2.cli",
    "pymotivaxmc2.controller",
    "pymotivaxmc2.core",
    "pymotivaxmc2.exceptions",
]

[[tool.importlinter.contracts]]
name = "Exceptions are a leaf"
type = "forbidden"
source_modules = ["pymotivaxmc2.exceptions"]
forbidden_modules = [
    "pymotivaxmc2.cli",
    "pymotivaxmc2.controller",
    "pymotivaxmc2.core",
    "pymotivaxmc2.enums",
]
